fix(core): input with duplicate name should throw a violation
Fixes #1092